--- a/package.json
+++ b/package.json
@@ -1,18 +1,25 @@
 {
+  "name": "hrnet-nextjs-ui",
   "private": true,
+  "version": "0.1.0",
   "scripts": {
     "build": "next build",
     "dev": "next dev",
     "start": "next start"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.4.2",
+    "@fortawesome/free-regular-svg-icons": "^6.4.2",
+    "@fortawesome/free-solid-svg-icons": "^6.4.2",
+    "@fortawesome/react-fontawesome": "^0.2.0",
     "date-fns": "^2.30.0",
     "gray-matter": "^4.0.3",
     "next": "latest",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "remark": "^14.0.3",
-    "remark-html": "^15.0.2"
+    "remark-html": "^15.0.2",
+    "sass": "^1.66.1"
   },
   "engines": {
     "node": ">=18"
