--- a/package.json
+++ b/package.json
@@ -12,11 +12,15 @@
     "@fortawesome/free-regular-svg-icons": "^6.4.2",
     "@fortawesome/free-solid-svg-icons": "^6.4.2",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "@reduxjs/toolkit": "^1.9.5",
     "date-fns": "^2.30.0",
     "gray-matter": "^4.0.3",
     "next": "latest",
+    "next-redux-wrapper": "^8.1.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-redux": "^8.1.2",
+    "redux": "^4.2.1",
     "remark": "^14.0.3",
     "remark-html": "^15.0.2",
     "sass": "^1.66.1"
