--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "redux": "^4.2.1",
     "remark": "^14.0.3",
     "remark-html": "^15.0.2",
-    "sass": "^1.66.1"
+    "sass": "^1.66.1",
+    "sharp": "^0.32.5"
   },
   "engines": {
     "node": ">=18"
