--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "build": "next build",
     "dev": "next dev",
-    "start": "next start"
+    "start": "npx serve@latest out"
   },
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^6.4.2",
