--- a/package.json
+++ b/package.json
@@ -13,12 +13,13 @@
     "@fortawesome/free-solid-svg-icons": "^6.4.2",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@reduxjs/toolkit": "^1.9.5",
-    "date-fns": "^2.30.0",
+    "date-picker-nextjs": "^0.1.17",
+    "eslint-config-next": "^13.5.3",
     "gray-matter": "^4.0.3",
-    "next": "latest",
+    "next": "^13.5.3",
     "next-redux-wrapper": "^8.1.0",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-redux": "^8.1.2",
     "redux": "^4.2.1",
     "remark": "^14.0.3",
