--- a/package.json
+++ b/package.json
@@ -2,6 +2,20 @@
   "name": "hrnet-nextjs-ui",
   "private": true,
   "version": "0.4.0",
+  "license": "BSD-3-Clause",
+  "description": "HR-Net project - P14 openClassrooms",
+  "author": "Pierre-Yves Léglise - axialdata",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/pyleglise/hrnet-nextjs-ui.git"
+  },
+  "keywords": [
+    "react",
+    "components",
+    "ui",
+    "modal",
+    "next.js"
+  ],
   "scripts": {
     "build": "next build",
     "dev": "next dev",
@@ -16,7 +30,7 @@
     "date-picker-nextjs": "^0.1.24",
     "eslint-config-next": "^13.5.3",
     "gray-matter": "^4.0.3",
-    "modal-nextjs": "^0.1.0",
+    "modal-nextjs": "^0.1.1",
     "next": "^13.5.3",
     "next-redux-wrapper": "^8.1.0",
     "react": "^18.2.0",
