--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "date-picker-nextjs": "^0.1.26",
     "eslint-config-next": "^13.5.3",
     "gray-matter": "^4.0.3",
+    "modal-nextjs": "^0.1.5-13",
     "next": "^13.5.3",
     "next-redux-wrapper": "^8.1.0",
     "react": "^18.2.0",
