--- a/package.json
+++ b/package.json
@@ -27,10 +27,10 @@
     "@fortawesome/free-solid-svg-icons": "^6.4.2",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@reduxjs/toolkit": "^1.9.5",
-    "date-picker-nextjs": "^0.1.26",
+    "date-picker-nextjs": "^0.1.27",
     "eslint-config-next": "^13.5.3",
     "gray-matter": "^4.0.3",
-    "modal-nextjs": "^0.1.5-15",
+    "modal-nextjs": "^0.1.5",
     "next": "^13.5.3",
     "next-redux-wrapper": "^8.1.0",
     "react": "^18.2.0",
