DAJR-256, DAJR-276 Fix prod bug

--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
   ],
   "scripts": {
     "build": "next build",
-    "dev": "next dev",
+    "dev": "rmdir .next /q /s &&  next dev",
     "start": "next start"
   },
   "dependencies": {
