--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "eslint-config-next": "^13.5.3",
     "gray-matter": "^4.0.3",
     "modal-nextjs": "^0.1.6",
-    "next": "^13.5.3",
+    "next": "latest",
     "next-redux-wrapper": "^8.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
